[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Player1.gd" type="Script" id=1]
[ext_resource path="res://src/Player2.gd" type="Script" id=2]
[ext_resource path="res://assets/circle.png" type="Texture" id=3]
[ext_resource path="res://src/Ball.gd" type="Script" id=4]
[ext_resource path="res://src/Game.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 80 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 528 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 960, 8 )

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Player1" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2( 72, 536 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Player1/CollisionShape2D"]
polygon = PoolVector2Array( -8, 80, -8, -80, 8, -80, 8, 80 )

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 1784, 8 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 64, 528 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Player2/CollisionShape2D"]
polygon = PoolVector2Array( -8, 80, -8, -80, 8, -80, 8, 80 )

[node name="LeftBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBoundary"]
position = Vector2( 8, 536 )
shape = SubResource( 2 )

[node name="RightBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBoundary"]
position = Vector2( 1912, 536 )
shape = SubResource( 2 )

[node name="Borders" type="StaticBody2D" parent="."]

[node name="UpperWall" type="CollisionShape2D" parent="Borders"]
position = Vector2( 960, 8 )
shape = SubResource( 3 )

[node name="BottomWall" type="CollisionShape2D" parent="Borders"]
position = Vector2( 960, 1072 )
shape = SubResource( 3 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 960, 536 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Ball"]
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 3 )

[node name="P1ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 1920.0
margin_bottom = 1080.0
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_right = 1920.0
margin_bottom = 1080.0
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarnLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="."]

[node name="MatchTimer" type="Timer" parent="."]
